--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 if(OpenMP_CXX_FOUND)
 message(STATUS "has omp")
 set(USE_OMP ON)
+add_definitions(-DUSE_OMP)
 else()
 message(STATUS "no omp")
 set(USE_OMP OFF)
 endif()
 
-find_package(Curses)
+find_package(Curses REQUIRED)
 if(${CURSES_FOUND})
 message(STATUS "has ncurses")
 message(STATUS "INCLUDE DIR: ${CURSES_INCLUDE_DIR}")
@@ -49,14 +50,24 @@ else()
 message(STATUS "has NO ncurses")
 endif()
 
+set(BUILD_TEST ON)
+if(${BUILD_TEST})
+add_executable(test2 test2.cpp matrix.cpp layer.cpp network.cpp)
+add_executable(test4 testtrain.cpp train.cpp matrix.cpp layer.cpp network.cpp)
+add_executable(test3 testmouse.cpp)
+add_executable(test5 testsave.cpp matrix.cpp layer.cpp network.cpp)
+target_link_libraries(test3 ${CURSES_LIBRARIES})
+if(${USE_OMP})
 add_executable(test1 testomp.cpp)
 target_link_libraries(test1 OpenMP::OpenMP_CXX)
-add_executable(test2 test2.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(train train1.cpp train.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(test4 testtrain.cpp train.cpp matrix.cpp layer.cpp network.cpp)
-target_link_libraries(train OpenMP::OpenMP_CXX)
 target_link_libraries(test4 OpenMP::OpenMP_CXX)
+endif()
+endif()
+
+add_executable(train train1.cpp train.cpp matrix.cpp layer.cpp network.cpp)
 add_executable(drawdata data.cpp)
-add_executable(test3 testmouse.cpp)
-target_link_libraries(test3 ${CURSES_LIBRARIES})
+if(${USE_OMP})
+target_link_libraries(train OpenMP::OpenMP_CXX)
+endif()
 target_link_libraries(drawdata ${CURSES_LIBRARIES})
+target_link_libraries(train ${NCURSES_LIBRARIES})
