rewrite layer network train

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ endif()
 set(BUILD_TEST ON)
 if(${BUILD_TEST})
 add_executable(test2 test2.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(test4 testtrain.cpp train.cpp matrix.cpp layer.cpp network.cpp)
+add_executable(test4 testtrain.cpp matrix.cpp layer.cpp network.cpp)
 add_executable(test3 testmouse.cpp)
 add_executable(test5 testsave.cpp matrix.cpp layer.cpp network.cpp)
 add_executable(readdata readmnist.cpp)
