--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,28 +57,18 @@ else()
 message(FATAL_ERROR "has NO ncurses")
 endif()
 
-set(BUILD_TEST ON)
-if(${BUILD_TEST})
-add_executable(test2 test2.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(test4 testtrain.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(test3 testmouse.cpp)
-add_executable(test5 testsave.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(readdata readmnist.cpp)
-target_link_libraries(test3 ${CURSES_LIBRARIES})
-if(${USE_OMP})
-add_executable(test1 testomp.cpp)
-target_link_libraries(test1 OpenMP::OpenMP_CXX)
-target_link_libraries(test4 OpenMP::OpenMP_CXX)
-endif()
-endif()
 
-add_executable(train train1.cpp train.cpp matrix.cpp layer.cpp network.cpp)
-add_executable(trainmnist train2.cpp train.cpp matrix.cpp layer.cpp network.cpp)
+add_executable(readdata readmnist.cpp)
+add_executable(train train1.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+add_executable(trainmnist train2.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+add_executable(generate generate.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(drawdata data.cpp)
 if(${USE_OMP})
 target_link_libraries(train OpenMP::OpenMP_CXX)
 target_link_libraries(trainmnist OpenMP::OpenMP_CXX)
+target_link_libraries(generate OpenMP::OpenMP_CXX)
 endif()
 target_link_libraries(drawdata ${CURSES_LIBRARIES})
-target_link_libraries(train ${NCURSES_LIBRARIES})
-target_link_libraries(trainmnist ${NCURSES_LIBRARIES})
+target_link_libraries(train ${CURSES_LIBRARIES})
+target_link_libraries(generate ${CURSES_LIBRARIES})
+target_link_libraries(trainmnist ${CURSES_LIBRARIES})
