training use EMNIST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,15 +60,22 @@ endif()
 
 add_executable(readdata readmnist.cpp)
 add_executable(train train1.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+add_executable(drawdata data.cpp)
 add_executable(trainmnist train2.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(generate generate.cpp matrix.cpp layer.cpp network.cpp function.cpp)
-add_executable(drawdata data.cpp)
+add_executable(trainemnist trainemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+add_executable(generateemnist generateemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 if(${USE_OMP})
+	message(STATUS "use omp")
 target_link_libraries(train OpenMP::OpenMP_CXX)
 target_link_libraries(trainmnist OpenMP::OpenMP_CXX)
 target_link_libraries(generate OpenMP::OpenMP_CXX)
+target_link_libraries(trainemnist OpenMP::OpenMP_CXX)
+target_link_libraries(generateemnist OpenMP::OpenMP_CXX)
 endif()
 target_link_libraries(drawdata ${CURSES_LIBRARIES})
 target_link_libraries(train ${CURSES_LIBRARIES})
 target_link_libraries(generate ${CURSES_LIBRARIES})
 target_link_libraries(trainmnist ${CURSES_LIBRARIES})
+target_link_libraries(generateemnist ${CURSES_LIBRARIES})
+target_link_libraries(trainemnist ${CURSES_LIBRARIES})
