--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ else()
 message(STATUS "no omp")
 set(USE_OMP OFF)
 endif()
+set(ENABLE_PICTURE OFF)
 
 find_package(Curses REQUIRED)
 if(${CURSES_FOUND})
@@ -65,6 +66,13 @@ add_executable(trainmnist train2.cpp matrix.cpp layer.cpp network.cpp function.c
 add_executable(generate generate.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(trainemnist trainemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(generateemnist generateemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+if(${ENABLE_PICTURE})
+  find_package(X11 REQUIRED)
+  link_libraries(${X11_LIBRARIES})
+  include_directories(${X11_INCLUDE_DIR})
+  add_executable(learnpicture picturelearning matrix.cpp layer.cpp network.cpp function.cpp)
+endif()
+
 if(${USE_OMP})
 	message(STATUS "use omp")
 target_link_libraries(train OpenMP::OpenMP_CXX)
