it always goes into errors
give up using buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,21 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.6)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(ENABLE_PICTURE ON)
 project(myAI)
 if(APPLE)
-execute_process( COMMAND brew --prefix libomp
-		OUTPUT_VARIABLE HOMEBREW_LIBOMP_PREFIX
-		OUTPUT_STRIP_TRAILING_WHITESPACE)
-set(OpenMP_C_FLAGS
-"-Xpreprocessor -fopenmp -I${HOMEBREW_LIBOMP_PREFIX}/include/")
-set(OpenMP_CXX_FLAGS
-"-Xpreprocessor -fopenmp -I${HOMEBREW_LIBOMP_PREFIX}/include/")
-set(OpenMP_C_LIB_NAMES omp)
-set(OpenMP_CXX_LIB_NAMES omp)
-set(OpenMP_omp_LIBRARY ${HOMEBREW_LIBOMP_PREFIX}/lib/libomp.dylib)
-set(${OpenMP_C_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
-set(${OpenMP_CXX_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
+  execute_process( COMMAND brew --prefix libomp
+    OUTPUT_VARIABLE HOMEBREW_LIBOMP_PREFIX
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+  set(OpenMP_C_FLAGS
+    "-Xpreprocessor -fopenmp -I${HOMEBREW_LIBOMP_PREFIX}/include/")
+  set(OpenMP_CXX_FLAGS
+    "-Xpreprocessor -fopenmp -I${HOMEBREW_LIBOMP_PREFIX}/include/")
+  set(OpenMP_C_LIB_NAMES omp)
+  set(OpenMP_CXX_LIB_NAMES omp)
+  set(OpenMP_omp_LIBRARY ${HOMEBREW_LIBOMP_PREFIX}/lib/libomp.dylib)
+  set(${OpenMP_C_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
+  set(${OpenMP_CXX_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
 endif()
 find_package(OpenMP)
 
@@ -33,29 +34,28 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 option(ENABLE_OMP ON)
 if(${ENABLE_OMP})
-message(STATUS "enable omp")
+  message(STATUS "enable omp")
 endif()
 message(STATUS "enable omp:${ENABLE_OMP}")
 message(STATUS "use omp:${USE_OMP}")
 message(STATUS "omp cxx found:${OpenMP_CXX_FOUND}")
 if((${OpenMP_CXX_FOUND}) AND (${ENABLE_OMP}))
-message(STATUS "has omp")
-set(USE_OMP ON)
-add_definitions(-DUSE_OMP)
+  message(STATUS "has omp")
+  set(USE_OMP ON)
+  add_definitions(-DUSE_OMP)
 else()
-message(STATUS "no omp")
-set(USE_OMP OFF)
+  message(STATUS "no omp")
+  set(USE_OMP OFF)
 endif()
-set(ENABLE_PICTURE OFF)
 
 find_package(Curses REQUIRED)
 if(${CURSES_FOUND})
-message(STATUS "has ncurses")
-message(STATUS "INCLUDE DIR: ${CURSES_INCLUDE_DIR}")
-message(STATUS "LIBRARY DIR: ${NCURSES_LIBRARIES}")
-include_directories(${NCURSES_INCLUDE_DIR})
+  message(STATUS "has ncurses")
+  message(STATUS "INCLUDE DIR: ${CURSES_INCLUDE_DIR}")
+  message(STATUS "LIBRARY DIR: ${NCURSES_LIBRARIES}")
+  include_directories(${NCURSES_INCLUDE_DIR})
 else()
-message(FATAL_ERROR "has NO ncurses")
+  message(FATAL_ERROR "has NO ncurses")
 endif()
 
 
@@ -66,20 +66,29 @@ add_executable(trainmnist train2.cpp matrix.cpp layer.cpp network.cpp function.c
 add_executable(generate generate.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(trainemnist trainemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
 add_executable(generateemnist generateemnist.cpp matrix.cpp layer.cpp network.cpp function.cpp)
+
+message(STATUS "picture:")
 if(${ENABLE_PICTURE})
+  message(STATUS "enable picture")
   find_package(X11 REQUIRED)
   link_libraries(${X11_LIBRARIES})
   include_directories(${X11_INCLUDE_DIR})
   add_executable(learnpicture picturelearning matrix.cpp layer.cpp network.cpp function.cpp)
+else()
+  message(STATUS "disable picture")
 endif()
 
 if(${USE_OMP})
-	message(STATUS "use omp")
-target_link_libraries(train OpenMP::OpenMP_CXX)
-target_link_libraries(trainmnist OpenMP::OpenMP_CXX)
-target_link_libraries(generate OpenMP::OpenMP_CXX)
-target_link_libraries(trainemnist OpenMP::OpenMP_CXX)
-target_link_libraries(generateemnist OpenMP::OpenMP_CXX)
+  message(STATUS "use omp")
+  target_link_libraries(train OpenMP::OpenMP_CXX)
+  target_link_libraries(trainmnist OpenMP::OpenMP_CXX)
+  target_link_libraries(generate OpenMP::OpenMP_CXX)
+  target_link_libraries(trainemnist OpenMP::OpenMP_CXX)
+  target_link_libraries(generateemnist OpenMP::OpenMP_CXX)
+  if(${ENABLE_PICTURE})
+    message("use picture")
+    target_link_libraries(learnpicture OpenMP::OpenMP_CXX)
+  endif()
 endif()
 target_link_libraries(drawdata ${CURSES_LIBRARIES})
 target_link_libraries(train ${CURSES_LIBRARIES})
