it can't using OpenCl
dyld[4447]: Library not loaded: /System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL
  Referenced from: <EC7DD313-E926-3F66-A0E8-CCD3883AF2B7> /Users/***/Desktop/myAI/build/Release/test-cl-matrix
  Reason: tried: '/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL' (no such file), '/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL' (no such file, no dyld cache)
[1]    4447 abort      ./build/Release/test-cl-matrixranch main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ if(APPLE)
   set(OpenMP_omp_LIBRARY ${HOMEBREW_LIBOMP_PREFIX}/lib/libomp.dylib)
   set(${OpenMP_C_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
   set(${OpenMP_CXX_INCLUDE_DIR} "${HOMEBREW_LIBOMP_PREFIX}/include")
+
+  set(CMAKE_MACOSX_RPATH 1)
 endif()
 find_package(OpenMP)
 
@@ -97,7 +99,7 @@ if(${ENABLE_PICTURE})
   find_package(X11 REQUIRED)
   link_libraries(${X11_LIBRARIES})
   include_directories(${X11_INCLUDE_DIR})
-  add_executable(learnpicture picturelearning ${STANDARD_CPPS})
+  add_executable(learnpicture picturelearning.cpp ${STANDARD_CPPS})
 else()
   message(STATUS "disable picture")
 endif()
