--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(ENABLE_PICTURE ON)
 
-set(ENABLE_OMP OFF)
+set(ENABLE_OMP ON)
 set(USE_Opencl ON)
 project(myAI)
 
-if(${ENABLE_OMP} AND ${USE_Opencl})
-  message(FATAL_ERROR "USE either opencl or openmp")
-endif()
 # finding OpenMP
 if(${ENABLE_OMP})
   if(APPLE)
@@ -116,13 +113,7 @@ endif()
 
 if(${USE_OMP})
   message(STATUS "use omp")
-  target_link_libraries(train OpenMP::OpenMP_CXX)
-  target_link_libraries(trainmnist OpenMP::OpenMP_CXX)
-  target_link_libraries(generate OpenMP::OpenMP_CXX)
-  target_link_libraries(trainemnist OpenMP::OpenMP_CXX)
-  target_link_libraries(generateemnist OpenMP::OpenMP_CXX)
-  if(${ENABLE_PICTURE})
-    message("use picture")
-    target_link_libraries(learnpicture OpenMP::OpenMP_CXX)
-  endif()
+  target_link_libraries(trainemnistconvolution OpenMP::OpenMP_CXX)
+  target_link_libraries(generateemnistconvolution OpenMP::OpenMP_CXX)
+  target_link_libraries(test-ocl-conv OpenMP::OpenMP_CXX)
 endif()
