--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(ENABLE_PICTURE ON)
 
-set(ENABLE_OMP ON)
+set(ENABLE_OMP OFF)
 set(USE_Opencl ON)
 project(myAI)
 
@@ -92,6 +92,7 @@ list(APPEND STANDARD_CPPS "convolution_layer.cpp")
 list(APPEND STANDARD_CPPS "average_layer.cpp")
 list(APPEND STANDARD_CPPS "max_layer.cpp")
 list(APPEND STANDARD_CPPS "NN.cpp")
+list(APPEND STANDARD_CPPS "ocl.cpp")
 
 message(STATUS "standard cpps : ${STANDARD_CPPS}")
 add_executable(trainemnistconvolution trainemnist.cpp ${STANDARD_CPPS})
@@ -99,6 +100,7 @@ add_executable(generateemnistconvolution generateemnist.cpp ${STANDARD_CPPS})
 add_executable(test-ocl-conv test-ocl-conv.cpp ${STANDARD_CPPS})
 target_link_libraries(trainemnistconvolution ${CURSES_LIBRARIES})
 target_link_libraries(generateemnistconvolution ${CURSES_LIBRARIES})
+add_executable(testtrain testtrain.cpp ${STANDARD_CPPS})
 
 message(STATUS "picture:")
 if(${ENABLE_PICTURE})
@@ -116,4 +118,5 @@ if(${USE_OMP})
   target_link_libraries(trainemnistconvolution OpenMP::OpenMP_CXX)
   target_link_libraries(generateemnistconvolution OpenMP::OpenMP_CXX)
   target_link_libraries(test-ocl-conv OpenMP::OpenMP_CXX)
+  target_link_libraries(testtrain OpenMP::OpenMP_CXX)
 endif()
