--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(ENABLE_PICTURE ON)
 
-set(ENABLE_OMP OFF)
+set(ENABLE_OMP ON)
 set(USE_Opencl ON)
 project(myAI)
 
