fux a few fugs : testlayers.cpp
adding pad to convolution_layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,11 +97,16 @@ list(APPEND STANDARD_CPPS "adam.cpp")
 
 message(STATUS "standard cpps : ${STANDARD_CPPS}")
 add_executable(trainemnistconvolution trainemnist.cpp ${STANDARD_CPPS})
+add_executable(trainemnist trainemnist1.cpp ${STANDARD_CPPS})
 add_executable(generateemnistconvolution generateemnist.cpp ${STANDARD_CPPS})
+add_executable(generateemnist generateemnist1.cpp ${STANDARD_CPPS})
 add_executable(test-ocl-conv test-ocl-conv.cpp ${STANDARD_CPPS})
 target_link_libraries(trainemnistconvolution ${CURSES_LIBRARIES})
+target_link_libraries(trainemnist ${CURSES_LIBRARIES})
 target_link_libraries(generateemnistconvolution ${CURSES_LIBRARIES})
+target_link_libraries(generateemnist ${CURSES_LIBRARIES})
 add_executable(testtrain testtrain.cpp ${STANDARD_CPPS})
+add_executable(testlayers testlayers.cpp ${STANDARD_CPPS})
 
 message(STATUS "picture:")
 if(${ENABLE_PICTURE})
@@ -117,7 +122,10 @@ endif()
 if(${USE_OMP})
   message(STATUS "use omp")
   target_link_libraries(trainemnistconvolution OpenMP::OpenMP_CXX)
+  target_link_libraries(trainemnist OpenMP::OpenMP_CXX)
   target_link_libraries(generateemnistconvolution OpenMP::OpenMP_CXX)
+  target_link_libraries(generateemnist OpenMP::OpenMP_CXX)
   target_link_libraries(test-ocl-conv OpenMP::OpenMP_CXX)
   target_link_libraries(testtrain OpenMP::OpenMP_CXX)
+  target_link_libraries(testlayers OpenMP::OpenMP_CXX)
 endif()
