--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 image.txt filter=lfs diff=lfs merge=lfs -text
+emnist/gzip/emnist-byclass-train-images-idx3-ubyte.gz filter=lfs diff=lfs merge=lfs -text
+emnist/gzip/emnist-bymerge-train-images-idx3-ubyte.gz filter=lfs diff=lfs merge=lfs -text
